--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  background-color: lightgray;
+  background-color: white;
   font-size: 16px;
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
