--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,9 @@ html {
 
 body {
   width: 60%;
+  /* max-width: 1200px; */
   margin-left: 20%;
+  /* justify-content: center; */
 }
 
 header {
@@ -75,4 +77,37 @@ a {
 #skills li {
   list-style-type: none;
   font-size: 4rem;
+}
+
+#contact {
+  margin-top: 2rem;
+}
+
+#contact form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+#contact input {
+  border: solid 1px black;
+  height: 2rem;
+  width: 30rem;
+  border-radius: 5px;
+}
+#contact textarea {
+  border: solid 1px black;
+  border-radius: 5px;
+  width: 30rem;
+}
+
+footer {
+  text-align: center;
+  margin-top: 5rem;
+  height: 100px;
+  border-top: 1px solid black;
+}
+footer h3 {
+  position: relative;
+  top: 40px;
 }
