--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --default-width: 50%;
+  --ipad-landscape: 75%;
+}
 
 html {
   background-color: white;
@@ -11,13 +15,15 @@ html {
 }
 
 body {
-  width: 60%;
+  /* width: 60%; */
   /* max-width: 1200px; */
-  margin-left: 20%;
+  /* margin-left: 20%; */
   /* justify-content: center; */
 }
 
 header {
+  width: var(--default-width);
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -40,15 +46,18 @@ a {
   color: black;
 }
 #about {
-  display: inline-flex;
+  display: flex;
+  width: var(--default-width);
+  margin: auto;
   gap: 5%;
   margin-top: 5rem;
   align-items: center;
   justify-content: space-between;
   /* border: solid 1px red; */
 }
+
 .write-up {
-  width: 50%;
+  /* width: 50%; */
   font-size: 1.1rem;
 }
 
@@ -57,8 +66,9 @@ a {
 }
 
 #projects {
+  width: var(--default-width);
+  margin: auto;
   margin-top: 2rem;
-  /* border: solid red 1px; */
 }
 
 .section-heading {
@@ -72,14 +82,25 @@ a {
 }
 
 #skills {
+  width: var(--default-width);
+  margin: auto;
   margin-top: 2rem;
 }
+
+.skill-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+}
+
 #skills li {
   list-style-type: none;
   font-size: 4rem;
 }
 
 #contact {
+  width: var(--default-width);
+  margin: auto;
   margin-top: 2rem;
 }
 
@@ -110,4 +131,42 @@ footer {
 footer h3 {
   position: relative;
   top: 40px;
+}
+
+@media screen and (max-width: 1600px) {
+  header {
+    /* display: flex; */
+    flex-direction: column;
+    gap: 2rem;
+    text-align: center;
+  }
+  .menu {
+    /* display: block; */
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  #about {
+    flex-direction: column-reverse;
+    gap: 2.5rem;
+    /* padding: 5rem; */
+  }
+  .write-up {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  header,
+  #about,
+  #projects,
+  #skills,
+  #contact {
+    width: var(--ipad-landscape);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #contact input,
+  #contact textarea {
+    width: 20rem;
+  }
 }
