--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,13 @@ html {
   font-size: 16px;
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
+button {
+  padding: 3px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
 
 body {
   /* width: 60%; */
